--- a/package.json
+++ b/package.json
@@ -6,11 +6,24 @@
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
     "start": "wrangler dev",
-    "cf-typegen": "wrangler types"
+    "cf-typegen": "wrangler types",
+		"test": "vitest"
+  },
+  "dependencies": {
+    "@hono/zod-validator": "^0.4.1",
+    "hono": "^4.6.8",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20241112.0",
-    "typescript": "^5.5.2",
-    "wrangler": "^3.60.3"
+    "@cloudflare/vitest-pool-workers": "^0.5.24",
+    "@cloudflare/workers-types": "^4.20241022.0",
+    "@eslint/js": "^9.14.0",
+    "eslint": "^9.14.0",
+    "globals": "^15.12.0",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.13.0",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^2.1.4",
+    "wrangler": "^3.83.0"
   }
 }
